@@ -6,6 +6,7 @@ import java.util.TreeSet;
 
 import com.floreysoft.jmte.Engine;
 import com.floreysoft.jmte.ModelAdaptor;
+import com.floreysoft.jmte.ProcessListener;
 import com.floreysoft.jmte.ScopedMap;
 import com.floreysoft.jmte.TemplateContext;
 import com.floreysoft.jmte.util.Util;
@@ -29,9 +30,9 @@ public abstract class AbstractCompiledTemplate extends Template {
 	}
 
 	@Override
-	public String transform(Map<String, Object> model, ModelAdaptor modelAdaptor) {
+	public String transform(Map<String, Object> model, ModelAdaptor modelAdaptor, ProcessListener processListener) {
 		TemplateContext context = new TemplateContext(template, sourceName,
-				new ScopedMap(model), modelAdaptor, engine);
+				new ScopedMap(model), modelAdaptor, engine, processListener);
 
 		String transformed = transformCompiled(context);
 		String unescaped = Util.NO_QUOTE_MINI_PARSER.unescape(transformed);
